Atualizações dos códigos publicado e remoção de conexão BD com azure.

--- a/src/cabide-solidario/appsettings.json
+++ b/src/cabide-solidario/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=cabide-solidario;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=cabide-solidario;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=cabide-solidario.database.windows.net;Database=cabide-solidario;Uid=AdminCabide;Pwd=Cabide-solidario"
-    //"DefaultConnection": "Data Source=SQL8010.site4now.net;Initial Catalog=db_aa8b9e_cabsol;User Id=db_aa8b9e_cabsol_admin;Password=cabide123"
+    "DefaultConnection": "Data Source=SQL8010.site4now.net;Initial Catalog=db_aa8b9e_cabsol;User Id=db_aa8b9e_cabsol_admin;Password=cabide123"
   }
   }
